@@ -1,3 +1,8 @@
+2022-07-24 Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* Refactor configure.ac
+	  - improve --version output
+	  - use pkg-config to get link flags
+
 2022-07-10 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Change log level for some deprecations
 	* Update manual pages
